--- a/apps/users/templates/users/login.html
+++ b/apps/users/templates/users/login.html
@@ -2,7 +2,7 @@
 
 {% block title %} Kirish {% endblock %}
 
-<!-- {% block navbar %} {% endblock %} -->
+{% block navbar %} {% endblock %}
 
 {% block content %}
 <div class="card login-card p-4 p-md-5">
@@ -57,4 +57,4 @@
 </div>
 
 {% endblock %}
-<!-- {% block footer %} {% endblock %} -->
+{% block footer %} {% endblock %}
