--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <title>{% block title %} {% endblock %}</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" 
@@ -34,9 +35,11 @@
             <div class="container">
                 <a href="/" class="navbar-brand">E-shop</a>
 
-                <button class="navbar-toggler" type="button" 
-                data-bs-toggle="collapse" 
-                data-bs-target="#navbarNav">
+
+                <button class="navbar-toggler" type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#navbarNav"
+                >
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
@@ -46,20 +49,21 @@
                             <a href="/" class="nav-link">Asosiy</a>
                         </li>
                     </ul>
-                    
+
                     <div class="navbar-nav">
                         {% if user.is_authenticated %}
                         <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" id="userDropdown" 
-                            role="button" 
-                            data-bs-toggle="dropdown">
+                            <a href="#" class="nav-link dropdown-toggle" id="userDropdown"
+                            role="button"
+                            data-bs-target="dropdown"
+                            >
                                 <i class="fas fa-user me-1"></i>{{user.username}}
                             </a>
 
                             <ul class="dropdown-menu dropdown-menu-end">
                                 <li><a href="#" class="dropdown-item">Profil</a></li>
-                                <li><hr class="dropdown-divider"></li>
-                                <li><a href="#" class="dropdown-item">Log out</a></li>
+                                <li><hr class="dropdown-dvider"></li>
+                                <li><a href="#" class="dropdown-item"> Log out</a></li>
                             </ul>
                         </div>
                         {% else %}
@@ -70,10 +74,9 @@
             </div>
         </nav>
     {% endblock %}
-
     <div class="container my-4">
 
-        {% block content %}{% endblock %}
+        {% block content %} {% endblock %}
 
     </div>
 
@@ -85,9 +88,7 @@
             </div>
         </footer>
 
-        
-
-    {% endblock  %}
+    {% endblock %}
     
 </body>
 </html>
