--- a/apps/accounts/templates/accounts/login.html
+++ b/apps/accounts/templates/accounts/login.html
@@ -45,7 +45,7 @@
         </div>
         
         <div class="d-grid">
-            <button type="submit" class="btn btn-primary py-2 fw-bold">Kirish</button>
+            <button type="submit" target="_blank" class="btn btn-primary py-2 fw-bold">Kirish</button>
         </div>
         
         <div class="text-center mt-4">
