--- a/templates/admin_base.html
+++ b/templates/admin_base.html
@@ -91,7 +91,7 @@
                                 <div class="bg-primary text-white rounded-circle d-flex align-items-center justify-content-center me-2" style="width: 40px; height: 40px;">
                                     <i class="bi bi-person"></i>
                                 </div>
-                                <span>{{ request.user.username }}</span>
+                                <!-- <span>{{ request.user.username }}</span> -->
                             </a>
                             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
                                 <li><a class="dropdown-item" href="">Profile</a></li>
