--- a/templates/base.html
+++ b/templates/base.html
@@ -31,10 +31,9 @@
 </head>
 <body class="bg-light">
     {% block navbar %}
-        <nav class="navbar navbar-expend-lg navbar-dark bg-primary">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
             <div class="container">
                 <a href="/" class="navbar-brand">E-shop</a>
-
 
                 <button class="navbar-toggler" type="button"
                 data-bs-toggle="collapse"
@@ -46,7 +45,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav me-auto">
                         <li class="nav-item">
-                            <a href="/" class="nav-link">Asosiy</a>
+                            <!-- <a href="/" class="nav-link">Asosiy</a> -->
                         </li>
                     </ul>
 
@@ -55,40 +54,49 @@
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" id="userDropdown"
                             role="button"
-                            data-bs-target="dropdown"
-                            >
+                            data-bs-toggle="dropdown"
+                            aria-expanded="false">
                                 <i class="fas fa-user me-1"></i>{{user.username}}
                             </a>
 
-                            <ul class="dropdown-menu dropdown-menu-end">
+                            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
                                 <li><a href="#" class="dropdown-item">Profil</a></li>
-                                <li><hr class="dropdown-dvider"></li>
-                                <li><a href="#" class="dropdown-item"> Log out</a></li>
+                                <li><hr class="dropdown-divider"></li>
                             </ul>
                         </div>
                         {% else %}
-                            <a href="{% url 'login' %}">Kirish</a>
+                        <div class="nav-item dropdown">
+                            <a href="#" class="nav-link " id="loginDropdown"
+                            role="button"
+                            data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                            <span class="navbar-toggler-icon"></span>
+                            </a>
+
+                            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="loginDropdown">
+                                <li><a href="{% url 'login' %}" target="_blank" class="dropdown-item">Kirish</a></li>
+                            </ul>
+                        </div>
                         {% endif %}
                     </div>
                 </div>
             </div>
         </nav>
     {% endblock %}
+
     <div class="container my-4">
-
         {% block content %} {% endblock %}
-
     </div>
 
     {% block footer %}
-
-        <footer class="py-3 mt-4 bg-white boder-top">
+        <footer class="py-3 mt-4 bg-white border-top">
             <div class="container text-center">
-                <p class="mb-0 text-muted"> 2025 E-shop Platformasi.</p>
+                <p class="mb-0 text-muted">2025 E-shop Platformasi.</p>
             </div>
         </footer>
-
     {% endblock %}
     
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
